feat: ic workbench problems overlay